[package]
name = "trillium-caddy-repro"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10.1"
futures-lite = { version = "2.0.1", features = ["std"] }
log = "0.4.20"
trillium = "0.2.11"
trillium-client = "0.4.6"
trillium-server-common = "0.4.5"
trillium-smol = "0.3.1"
url = "2.4.1"
